package Model;

/**
 * Allocation eligibility status for an order line.
 */
public enum Status {
    ELIGIBLE,
    PARTIAL,
    UNDISPATCHABLE
}
